# CubeDynamics

./: .gitignore  CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  build.sh  cell_update_main.cpp  cell_update_main.h  clear.cl  cross_platform_vector.h  cube_color.h  cube_coords.cpp  cube_coords.h  cube_data.cpp  cube_data.h  cube_info.cpp  cube_info.h  display_ops.cpp  display_ops.h  framerate_control.h  frames_to_video.sh  generate_opencl_ops_file.sh  linux_build.sh  main.cpp  opencl_cell_update_main.cpp  opencl_executor.cpp  opencl_executor.h  opencl_ops2.cl  opencl_ops3.cl  parameters.h  quantity_info.h  readmd.md  readme.html  readme.md  triangle_gen.cpp  triangularize.cpp  triangularize.h  update.cpp  update.h  update_all.cpp  update_all.h  (+1 more)
